[gd_scene load_steps=2 format=3 uid="uid://cqms8p3b5gjj7"]

[ext_resource type="Script" path="res://Menus/options_menu.gd" id="1_b2k3l"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b2k3l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Logo" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Logo"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Logo/VBoxContainer"]
layout_mode = 2
text = " Ultimate Space Game
(LOGO)"

[node name="Menu" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Menu"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MasterVolume" type="Label" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2
text = "Master Volume:"

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2

[node name="FXVolume" type="Label" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2
text = "FX Volume:"

[node name="HSlider2" type="HSlider" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2

[node name="MusicVolume" type="Label" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2
text = "Music Volume:"

[node name="HSlider3" type="HSlider" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2

[node name="FlickeringLights" type="Label" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2
text = "Flickering Light Effects:"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Active:"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="BackButton" type="Button" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2
text = "Back"

[node name="ResetButton" type="Button" parent="HBoxContainer/VBoxContainer/Menu/VBoxContainer2"]
layout_mode = 2
text = "Reset Progress"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu/VBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu/VBoxContainer2/ResetButton" to="." method="_on_reset_button_pressed"]
